# sedi

./: .gitignore  README.md  sedi.opam
pkg/: pkg.ml
