opam-version: "1.2"
name: "sedi"
author: "Petter A. Urkedal <paurkedal@gmail.com>"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/sedi"
bug-reports: "https://github.com/paurkedal/sedi/issues"
dev-repo: "https://github.com/paurkedal/sedi.git"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: [
  "cmdliner"
  "fmt"
  "logs"
  "jbuilder" {build}
  "ppx_compose"
]
