opam-version: "2.0"
name: "sedi"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/sedi"
bug-reports: "https://github.com/paurkedal/sedi/issues"
depends: [
  "ocaml"
  "cmdliner"
  "fmt"
  "logs"
  "lwt"
  "lwt_ppx"
  "jbuilder" {build}
  "ppx_compose"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/paurkedal/sedi.git"
